Change History
--------------

This file contains a list of all changes starting after the release of
sox-11gamma.

sox-14.0.1
----------

  File formats:

  o Added support for non-standard, non-WAVE_FORMAT_EXTENSIBLE
    (esp. 24-bit) PCM wav.  (robs)

  Bug fixes:

  o Fix Sndtool read error causing noise at start.  (Reynir Stefánsson)
  o Fix [bug #1804772] Reverb effect locks up.  (Reynir Stefánsson)
  o Fix loss of 1 decoded FLAC block when using "trim 0 ...".  (robs)
  o Let "make distcheck" run some automated test scripts.
  o Distribute missing cmake files.
  o Fix ogg vorbis compile error on some platforms.
  o Remove unused libltdl that could cause header mismatch with
    installed libltdl.

sox-14.0.0
----------

  File formats:

  o Added ffmpeg support.  (Reuben Thomas)
  o FLAC: added seekable decoding; added seek-table generation.  (robs)
  o Added M3U & PLS playlist formats [FR# 1667341] (Note: SHOUTcast PLS
    is only partially supported).  (robs)
  o Made format readers and writers into individual modules for easier
    distribution of differently-licensed code.  (Reuben Thomas)
  o Added libao support.  (Reuben Thomas)
  o Added support for ADPCM-encoded PRC files, based on Danny Smith's
    rec2wav and sndcmp.  (Reuben Thomas)
  o Added AMR-NB [FR# 728875] & AMR-WB formats (with external libs).  (robs)
  o Added LPC-10 support.  (Reuben Thomas)

  Effects:

  o Use LADSPA effects (one input, one output).  (Reuben Thomas)
  o --octave option changed to --plot; can now also use gnuplot to
    plot effect transfer function.  (robs)
  o Added soft-knee companding.  (robs)
  o Show (with --plot) compand transfer function.  (robs)
  o Allow e.g. "vol 6dB" (as well as "vol 6 dB").  (robs)
  o Changed deemph filter from 1st order to 2nd order for
    better accuracy.  (robs)
  o Add option to silence effect to leave periods of silence
    in and only strip out extra silence.   (Mark Schreiber)