@@ -753,20 +753,13 @@ as exact filter coefficients can be computed in a reasonable amount of space.
 To be precise, this is done when both input-rate < output-rate, and
 output-rate \(di gcd(input-rate, output-rate) \(<= 511.
 .TP
-\fBreverb \fIgain-out reverb-time\fR <\fIdelay\fR>
-Add reverberation to the audio.  Each
-.I delay
-is given
-in milliseconds and its feedback is depending on the
-.I reverb-time
-in milliseconds.  Each
-.I delay
-should be in
-the range of half to quarter of
-.I reverb-time
-to get a realistic reverberation.
-.I gain-out
-is the volume of the output.
+\fBreverb [\fB-w\fR|\fB--wet-only\fR] [\fIreverberance\fR (50%) [\fIHF-damping\fR (50%)
+[\fIroom-scale\fR (100%) [\fIstereo-depth\fR (100%)
+.br
+[\fIpre-delay\fR (0ms) [\fIwet-gain\fR (0dB)]]]]]]
+.SP
+Add reverberation to the audio using the freeverb algorithm.
+Default values shown in parenthesis.
 .TP
 \fBreverse\fR
 Reverse the audio completely.
